# ayon-dependencies-tool

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.centos7  Dockerfile.debian  Dockerfile.rocky8  Dockerfile.rocky9  README.md  create_package.py  example_env  manage.ps1  mkdocs.yml  pyproject.toml  start.ps1  start.sh  version.py
1.1.0/: 404.html  index.html  license.html  objects.inv
1.1.0/autoapi/: summary.html
1.1.0/autoapi/dependencies/: __main__.html  _runtime_deps.html  cli.html  core.html  custom_solver.html  index.html  utils.html
1.1.0/autoapi/dependencies/tests/: index.html  test_dependencies.html
1.1.0/autoapi/server/: index.html
1.1.0/autoapi/service/: __main__.html  listener.html
1.1.0/search/: search_index.js  search_index.json
dependencies/: Dockerfile  Makefile  __init__.py  __main__.py  _runtime_deps.py  cli.py  core.py  custom_solver.py  dependencies.py  pyproject.toml  start.ps1  utils.py  version_utils.py
dependencies/services/: __init__.py  __main__.py  listener.py
dependencies/tests/: test_dependencies.py
dependencies/tests/resources/: openpype_pyproject.toml  pyproject.toml  pyproject_clean.toml
dependencies/tools/: create_env.ps1  create_env.sh
dependencies/tools/modules/powershell/BurntToast/BurntToast/: BurntToast.psd1
dependencies/tools/modules/powershell/BurntToast/Examples/Example09/: Get-ChocoUpgradeNotification.ps1
dependencies/tools/modules/powershell/BurntToast/Help/: New-BTAction.md  New-BTAudio.md  New-BTBinding.md  New-BTButton.md  New-BTContent.md  New-BTContextMenuItem.md  New-BTImage.md  New-BTInput.md  New-BTProgressBar.md  New-BTSelectionBoxItem.md  New-BTText.md  New-BTVisual.md  New-BurntToastNotification.md  README.md  Submit-BTNotification.md
server/: __init__.py
service/: Dockerfile  Dockerfile.rocky9  Makefile  __main__.py  listener.py  manage.ps1
