[tool.poetry]
name = "ayon-dependencies-tool"
version = "1.1.4-dev"
description = "Dependencies tool for AYON"
authors = ["Ynput s.r.o. <info@ynput.io>"]
package-mode = false

[tool.poetry.dependencies]
pkginfo = "^1.12"
appdirs = "^1.4"
poetry="~1.5.0"
python = ">=3.9,<4.0"
pydantic = "^1.10.2"
nxtools = "^1.6"
requests = "^2.25.1"
toml = "^0.10.2" # for parsing pyproject.toml
ayon-python-api = "*"
click = "^8.1"
distro = { version="^1.9.0", markers = "sys_platform == 'linux'"}

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"