[project]
name = "ayon-dependencies-tool"
version = "1.2.1-dev"
description = "Dependencies tool for AYON"
authors = [
    {name = "Ynput s.r.o.", email = "info@ynput.io"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pkginfo>=1.12",
    "appdirs>=1.4",
    "packaging>=24.0",
    "pydantic>=1.10.2,<2.0.0",
    "nxtools>=1.6",
    "requests>=2.32.5",
    "tomlkit>=0.14",
    "ayon-python-api==1.2.14",
    "click>=8.3",
    "distro>=1.9.0; sys_platform == 'linux'",
]

[dependency-groups]
dev = ["pytest>=9.0"]

[tool.uv]
package = false
